--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -27,6 +27,9 @@ hr {
 }
 /*========== Main css ends ========== */
 /*========== Admin css start ========== */
+.m-5 {
+    margin: 5px;
+}
 .required_label {
     color: red;
 }
